# ai-cookbook

./: .gitignore  .windsurfrules  README-query.md  README.md  check_all_databases.py  check_lancedb.py  check_page_numbers.py  cleanup_db.py  commit_message.md  logic prompt for knoledge graphs  process_documents.py  process_target_document.py  prompts.md  pyproject.toml  query_database.py  query_documents.py  reset_database.py  test.md
_documentation/: build_amendment.md  build_plan.md  docling_pipeline_context.md  lessons_learned.md  llamaindex_implementation_plan.md  llamaindex_integration.md  search_build.md
_knowledge-general/: lancedb_search_reference.md  uv_context.md
_knowledge-general/Docling context/: custom_conversion.py  docling v2.md  model-prefetching.md  multi-format-conversion.py
_knowledge-general/Docling_context/: batch_conversion.py
_knowledge-general/Lancedb_context/: LANCEDB-GITHUB-TEXT.MD  batching.md  db.py  embeddings.md  hybrid_chunking.md  hybrid_search.md  jina_embedding.md  lancedb_quickstart.md  lancedb_with_pydantic  query.py  reranking for hybrid search.md
_knowledge-general/llamaindex/: lancedb-with-llamaindex.md  llamaindex-with-lancedb.md
_processed_output/: 2408.09869.json  2408.09869.md
_tests/: test_cuda.py  test_pipeline.py
docling-playground/: 1-extraction.py  create_warmup_pdf.py  datapipeline.py  search_ui.py
docling-playground/utils/: viewer.py
search_module/: README.md  api.py  demo.py  explore_db.py  llamaindex_buildplan.md  llamaindex_demo.py  requirements.txt  search_client.py  test_llamaindex.py
(+40 files in other folders)
