[project]
name = "docling-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.24.0",
    "ipykernel>=6.29.5",
    "lancedb>=0.19.0",
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.42.2",
    "tiktoken>=0.9.0",
]

[tool.uv]
no-build-isolation-package = ["torch", "torchvision", "torchaudio"]
